DotToMetric/src/main/java/grammatica/DotGrammar2.java
/* Generated By:JavaCC: Do not edit this line. DotGrammar2.java */
package grammatica;
import utility.*;
public class DotGrammar2 implements DotGrammar2Constants {
  public ObjMetodo metodo;
  public TabellaSimboli tab_simboli;

  public ObjMetodo start() throws ParseException {
    metodo = new ObjMetodo("");
    tab_simboli = new TabellaSimboli();

    init();

    metodo.setSimboli(tab_simboli);
    metodo.inserisciMappaChiamate();
    return metodo;
}

  final public void init() throws ParseException {
          metodo.setNomeEsteso(getNomeMetodo());
    jj_consume_token(0);
  }

  final public String getNomeMetodo() throws ParseException {
  Token t;
  String nome_metodo;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DIGRAPH:
      jj_consume_token(DIGRAPH);
      break;
    case GRAPH:
      jj_consume_token(GRAPH);
      break;
    case SUBGRAPH:
      jj_consume_token(SUBGRAPH);
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    t = jj_consume_token(ID);
                                                        nome_metodo= t.image;
    jj_consume_token(PARENTESI_GRAFFA_APERTA);
    gestioneNodi();
    jj_consume_token(PARENTESI_GRAFFA_CHIUSA);
         {if (true) return nome_metodo;}
    throw new Error("Missing return statement in function");
  }

  final public void gestioneNodi() throws ParseException {
  Token t;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      t = jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PARENTESI_QUADRA_APERTA:
        dichiarazioneNodo(t);
        break;
      case ARCO:
        dichiarazioneArco(t);
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void dichiarazioneNodo(Token id) throws ParseException {
  Token t;
    jj_consume_token(PARENTESI_QUADRA_APERTA);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STYLE:
      case COLOR:
      case FILLCOLOR:
      case HEIGHT:
      case WIDTH:
      case URL:
      case LABEL:
      case FONTCOLOR:
      case DIR:
      case TOOLTIP:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STYLE:
      case COLOR:
      case FILLCOLOR:
      case HEIGHT:
      case WIDTH:
      case URL:
      case FONTCOLOR:
      case DIR:
      case TOOLTIP:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case HEIGHT:
          jj_consume_token(HEIGHT);
          break;
        case WIDTH:
          jj_consume_token(WIDTH);
          break;
        case COLOR:
          jj_consume_token(COLOR);
          break;
        case FILLCOLOR:
          jj_consume_token(FILLCOLOR);
          break;
        case STYLE:
          jj_consume_token(STYLE);
          break;
        case FONTCOLOR:
          jj_consume_token(FONTCOLOR);
          break;
        case URL:
          jj_consume_token(URL);
          break;
        case DIR:
          jj_consume_token(DIR);
          break;
        case TOOLTIP:
          jj_consume_token(TOOLTIP);
          break;
        default:
          jj_la1[4] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        jj_consume_token(UGUALE);
        jj_consume_token(ID);
        label_3:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case VIRGOLA:
            ;
            break;
          default:
            jj_la1[5] = jj_gen;
            break label_3;
          }
          jj_consume_token(VIRGOLA);
        }
        break;
      case LABEL:
        jj_consume_token(LABEL);
        jj_consume_token(UGUALE);
        t = jj_consume_token(ID);
                                                           tab_simboli.addSimbolo(id.image, t.image);
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case VIRGOLA:
            ;
            break;
          default:
            jj_la1[6] = jj_gen;
            break label_4;
          }
          jj_consume_token(VIRGOLA);
        }
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(PARENTESI_QUADRA_CHIUSA);
    jj_consume_token(PUNTO_E_VIRGOLA);
  }

  final public void dichiarazioneArco(Token id) throws ParseException {
  Token t;
    jj_consume_token(ARCO);
    t = jj_consume_token(ID);
                          if(!tab_simboli.isId(id.image))
                                                        tab_simboli.addSimbolo(id.image);

                                                metodo.addElement(id.image, t.image);
    jj_consume_token(PARENTESI_QUADRA_APERTA);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STYLE:
      case COLOR:
      case FONTSIZE:
      case LABEL:
      case FONTNAME:
      case DIR:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_5;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COLOR:
        jj_consume_token(COLOR);
        break;
      case FONTSIZE:
        jj_consume_token(FONTSIZE);
        break;
      case STYLE:
        jj_consume_token(STYLE);
        break;
      case FONTNAME:
        jj_consume_token(FONTNAME);
        break;
      case DIR:
        jj_consume_token(DIR);
        break;
      case LABEL:
        jj_consume_token(LABEL);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(UGUALE);
      jj_consume_token(ID);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VIRGOLA:
          ;
          break;
        default:
          jj_la1[10] = jj_gen;
          break label_6;
        }
        jj_consume_token(VIRGOLA);
      }
    }
    jj_consume_token(PARENTESI_QUADRA_CHIUSA);
    jj_consume_token(PUNTO_E_VIRGOLA);
  }

  /** Generated Token Manager. */
  public DotGrammar2TokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[11];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x1c00000,0x0,0x44000,0xd8000000,0xd8000000,0x800,0x800,0xd8000000,0x38000000,0x38000000,0x800,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x10000,0x0,0xc27,0xc23,0x0,0x0,0xc27,0x414,0x414,0x0,};
   }

  /** Constructor with InputStream. */
  public DotGrammar2(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public DotGrammar2(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new DotGrammar2TokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public DotGrammar2(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new DotGrammar2TokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public DotGrammar2(DotGrammar2TokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(DotGrammar2TokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[49];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 11; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
          if ((jj_la1_1[i] & (1<<j)) != 0) {
            la1tokens[32+j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 49; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
